# Wayport

./: .gitignore  README.md  pyproject.toml
src/wayport/: __init__.py  __main__.py
src/wayport/client/: __init__.py  client.py  local_proxy.py  tunnel.py  ui.py
src/wayport/common/: __init__.py  config.py  crypto.py  logging.py  protocol.py
src/wayport/exitnode/: __init__.py  server.py  socks.py  tunnel.py  ui.py
src/wayport/relay/: __init__.py  broker.py  server.py  session.py
tests/: __init__.py
